welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: illegal start of simple expression
		if () {
                    ^SnakeBuggle:15: error: ')' expected but '}' found.
	}
        ^