welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse;
	for (i<-1 to 6) {
		do {
			avance()
		} while (!estFaceMur)
		if (estFaceMur) {
			droite()
		}
		
		if () {
			droite()
		}
	}
}

